force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/APT_Opportunity_Product_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Line Item</label>
    <nameField>
        <displayFormat>OP-{000}</displayFormat>
        <label>Opportunity Product Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>