force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Change_Classification__c.field-meta.xml
<CustomField>
    <fullName>APT_Change_Classification__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Growth?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>