force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Classification__c.field-meta.xml
<CustomField>
    <fullName>APT_Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>New Business - One Off</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>