force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Contract_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Product__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Contract Product?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>