force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product Line Items</relationshipLabel>
    <relationshipName>Opportunity_Product_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>