force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>APT_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>