force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Quote_Proposal__c.field-meta.xml
<CustomField>
    <fullName>APT_Quote_Proposal__c</fullName>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Opportunity Product Line Items</relationshipLabel>
    <relationshipName>Opportunity_Product_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>