force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Revenue_Days__c.field-meta.xml
<CustomField>
    <fullName>APT_Revenue_Days__c</fullName>
    <description>Calculates days between Revenue Start and End dates</description>
    <formula>APT_Revenue_End_Date__c - APT_Revenue_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>