force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_Revenue_End_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Revenue_End_Date__c</fullName>
    <label>Revenue End Date</label>
    <type>Date</type>
</CustomField>