force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/fields/APT_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>APT_TotalPrice__c</fullName>
    <label>TotalPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>