force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/recordTypes/APT_New_Opportunity_Type.recordType-meta.xml
<RecordType>
    <fullName>APT_New_Opportunity_Type</fullName>
    <active>true</active>
    <label>New Opportunity Type</label>
</RecordType>