force-app/main/default/objects/APT_Opportunity_Product_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APT_Product_Text__c</columns>
    <columns>APT_Product_Configuration__c</columns>
    <columns>APT_Quote_Proposal__c</columns>
    <columns>APT_Sequence_Number__c</columns>
    <columns>APT_TotalPrice__c</columns>
    <columns>APT_Unit_Sales_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>